--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ $RECYCLE.BIN/
 # Thumbnails
 ._*
 
+# Java binary files
+/bin/
+
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
